--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -56,7 +56,7 @@ jobs:
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
 
     env:
-      Solution_Name: GitHubActionsTest.sln
+      Solution_Name: GitHubActionsTest/GitHubActionsTest.sln
      # Test_Project_Path: your-test-project-path
 
     steps:
